--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         
         Diese überraschende Ankündigung von Schabowski führte dazu, dass die DDR-Grenzen sich öffneten und war ein entscheidender Moment in der deutschen Geschichte, der letztendlich zur Wiedervereinigung Deutschlands beitrug.</div>
     
-        <img src="images.jpeg" alt="image" width="900px" class="zentrieren">
+        <img src="images.jpeg" alt="image" class="zentrieren" width="700px">
       </main>
 
 </body>
