hyperlinks eingefügt und mehr farbwechsel

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
 
   <main>
-    <h1 class="text-zentrieren">Die Berliner Mauer</h1>
-
-    <h2>Wie kam es zur Berliner Mauer </h2>
+    <h1 class="text-zentrieren"> <a href="https://de.wikipedia.org/wiki/Berliner_Mauer">Berliner Mauer</a>
+    </h1>
+    
+    <h2>Wie kam es zur Berliner Mauer - <a href="https://www.planet-wissen.de/geschichte/deutsche_geschichte/die_berliner_mauer/index.html">
+      Planet Wissen</a> </h2>
 
     <div>Walter Ulbrich lies die Mauer in der Nacht 
       vom 12. afu den 13. August 191 von der Vorstellung 
@@ -27,9 +29,9 @@
       Berliner-Ultimatum zu. Damit began die längste Krise im 
       kalten Krieg.</div>
 
-      <h2>Reaktion des Volks auf den Mauerbau</h2>
+      <h2>Reaktion des Volks auf den Mauerbau - <a href="https://www.youtube.com/watch?v=-3A9OLrckwY">DW Deutschland</a></h2>
 
-      <div>Das Volk probierte sich mithilfe von Protesten und
+      <div>Das Volk probierte sich mit Hilfe von Protesten und
         Demonstrationen gegen die Errichtung der Berliner Mauer, 
         wurden die Arbeiter und Soldaten nicht freundlich behandelt.
         Man beschimpfte sie, versammelte sich, konnte jedoch nicht
@@ -38,7 +40,7 @@
         Polizeiunterstütztung zukommen lassen.
       </div>
 
-      <h2>Der Mauerfall</h2>
+      <h2>Der Mauerfall - <a href="https://www.politische-bildung.de/berliner-mauerfall-einheit">politische Bildung</a></h2>
 
       <div>Am 9. November spielte das Reisegesetz eine entscheidende Rolle im Kontext der politischen Veränderungen in der DDR. Hier ist eine Zusammenfassung der Ereignisse dieses Tages:
        
